added methods to update the db for the webapi
