# internal/consulting/model_consultation_update.go
@@ -1,0 +1,23 @@
+/*
+ * Waiting List Api
+ *
+ * Consulting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xtodorovic@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package consulting
+
+type ConsultationUpdate struct {
+
+	// Unique identifier of the consultation request
+	Id string `json:"id"`
+
+	ScheduledDate string `json:"scheduledDate"`
+
+	ScheduledTime string `json:"scheduledTime" validate:"regexp=^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$"`
+
+	VideoLink string `json:"videoLink"`
+}
