# internal/consulting/model_consulting_form.go
@@ -1,0 +1,23 @@
+/*
+ * Waiting List Api
+ *
+ * Consulting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xtodorovic@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package consulting
+
+type ConsultingForm struct {
+
+	// Unique identifier for the consultation request
+	Id string `json:"id"`
+
+	Name string `json:"name"`
+
+	Email string `json:"email"`
+
+	Symptoms string `json:"symptoms"`
+}
